--- a/management-report/markdown/subpage-trends.Rmd
+++ b/management-report/markdown/subpage-trends.Rmd
@@ -32,9 +32,6 @@ detach("package:tidylog", unload = TRUE)
 # Load functions
 walk(dir(here::here("functions"), full.names = TRUE), source)
 
-current_fy <- paste0(substr(fy,1,4),
-                           "/", as.numeric(substr(fy,3,4)) + 1)
-
 # Load PDS data
 pds <- read_rds(get_mi_data_path("final_data", ext = "rds", test_output = test_output)) %>% 
   
@@ -70,19 +67,29 @@ pds_all %<>% rename(geog = ijb)
 
 pds_all$geog<- factor(pds_all$geog, levels = unique(pds_all$geog))
 
+#create year lists
+provisional_year <- paste0(as.numeric(substr(last(finalised_years),1,4)) + 1,
+                           "/", as.numeric(substr(last(finalised_years),6,7)) + 1)
+
+current_fy <- paste0(substr(fy,1,4),
+                           "/", as.numeric(substr(fy,3,4)) + 1)
+
+last_full_year <- if_else(qt == 4, current_fy, paste0(as.numeric(substr(fy,1,4)) - 1,
+                           "/", as.numeric(substr(fy,3,4))))
+
+all_years <- unique(pds_all$fy)
+
+if(qt == 4){full_years = all_years}else{full_years = all_years[-length(all_years)]}
 
 ```
 <!-- delete all of above when finished testing -->
 
 
-```{r data setup, include=FALSE}
-# to be automated based on whether current year is complete or not??
-#included_years <- c("2016/17", "2017/18", "2018/19", "2019/20", "2020/21", "2021/22", "2022/23", "2023/24")
+```{r data-setup, include=FALSE}
 
 #get totals for scotland, hbs and ijbs
 pds_all_totals <- bind_rows(
-  pds_all %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy) %>% summarise(total_referrals = sum(referrals))#,
- # pds_all %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
+  pds_all %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy) %>% summarise(total_referrals = sum(referrals))
 )
 
 pds_ijb %<>% rename(geog = ijb) 
@@ -90,8 +97,7 @@ pds_ijb %<>% rename(geog = ijb)
 pds_ijb$geog<- factor(pds_ijb$geog, levels = unique(pds_ijb$geog))
 
 pds_ijb_totals <- bind_rows(
-    pds_ijb %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy) %>% summarise(total_referrals = sum(referrals))#,
-  #pds_ijb %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
+    pds_ijb %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy) %>% summarise(total_referrals = sum(referrals))
 )
 
 pds_hb %<>% rename(geog = ijb) 
@@ -99,8 +105,7 @@ pds_hb %<>% rename(geog = ijb)
 pds_hb$geog<- factor(pds_hb$geog, levels = unique(pds_hb$geog))
 
 pds_hb_totals <- bind_rows(
-    pds_hb %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy) %>% summarise(total_referrals = sum(referrals))#,
- # pds_hb %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
+    pds_hb %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy) %>% summarise(total_referrals = sum(referrals))
 )
 
 pds_scot %<>% rename(geog = ijb) 
@@ -108,8 +113,7 @@ pds_scot %<>% rename(geog = ijb)
 pds_scot$geog<- factor(pds_scot$geog, levels = unique(pds_scot$geog))
 
 pds_scot_totals <- bind_rows(
-    pds_scot %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy) %>% summarise(total_referrals = sum(referrals))#,
- # pds_scot %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy, age_grp_2) %>% summarise(total_referrals = sum(referrals))
+    pds_scot %>% filter(age_grp_2 != "Unknown") %>% group_by(geog, fy) %>% summarise(total_referrals = sum(referrals))
 )
 
 #prepare population rate data
@@ -259,13 +263,13 @@ pds_all_totals %>% filter(geog == "Scotland" | grepl("NHS", geog)) %>%
             mutate(total_referrals = format(total_referrals, big.mark = ",")) %>% 
             pivot_wider(names_from = fy, values_from = total_referrals) %>%
             rename(`Health Board` = geog) %>%
-            kable(align = c("l", rep("r", length(unique(pds$fy))))) %>%
+            kable(align = c("l", rep("r", length(all_years)))) %>%
             kable_styling(full_width = FALSE) %>%
             column_spec(1, bold = TRUE) %>%
   # Add header above table 
             add_header_above(
                     c(" " = 1,
-                     "Financial Year of Diagnosis" = length(unique(pds$fy))))
+                     "Financial Year of Diagnosis" = length(all_years)))
 
 ```
 
@@ -277,13 +281,13 @@ pds_all_totals %>% filter(geog == "Scotland" | !grepl("NHS", geog)) %>%
             mutate(total_referrals = format(total_referrals, big.mark = ",")) %>% 
             pivot_wider(names_from = fy, values_from = total_referrals) %>% 
             rename(`Integration Authority Area` = geog) %>%
-            kable(align = c("l", rep("r", length(unique(pds$fy))))) %>% 
+            kable(align = c("l", rep("r", length(all_years)))) %>% 
             kable_styling(full_width = FALSE) %>%
             column_spec(1, bold = TRUE) %>%
   # Add header above table 
             add_header_above(
                        c(" " = 1,
-                         "Financial Year of Diagnosis" = length(unique(pds$fy)))) %>%
+                         "Financial Year of Diagnosis" = length(all_years))) %>%
             scroll_box(height = "740px")
  
 
@@ -428,13 +432,13 @@ Row {.tabset data-height=750}
 pds_all_rates %>% filter(geog == "Scotland" | grepl("NHS", geog)) %>%
             pivot_wider(names_from = fy, values_from = pop_rate_10000) %>%
             rename(`Health Board` = geog) %>%
-            kable(align = c("l", rep("r", length(unique(pds$fy))))) %>%
+            kable(align = c("l", rep("r", length(all_years)))) %>%
             kable_styling(full_width = FALSE) %>%
             column_spec(1, bold = TRUE) %>%
   # Add header above table
             add_header_above(
                     c(" " = 1,
-                     "Financial Year of Diagnosis" = length(unique(pds$fy))))
+                     "Financial Year of Diagnosis" = length(all_years)))
 
 ```
 
@@ -445,13 +449,13 @@ pds_all_rates %>% filter(geog == "Scotland" | grepl("NHS", geog)) %>%
 pds_all_rates %>% filter(geog == "Scotland" | !grepl("NHS", geog)) %>%
             pivot_wider(names_from = fy, values_from = pop_rate_10000) %>%
             rename(`Integration Authority Area` = geog) %>%
-            kable(align = c("l", rep("r", length(unique(pds$fy))))) %>%
+            kable(align = c("l", rep("r", length(all_years)))) %>%
             kable_styling(full_width = FALSE) %>%
             column_spec(1, bold = TRUE) %>%
   # Add header above table
             add_header_above(
                        c(" " = 1,
-                         "Financial Year of Diagnosis" = length(unique(pds$fy)))) %>%
+                         "Financial Year of Diagnosis" = length(all_years))) %>%
             scroll_box(height = "720px")
 
 
@@ -501,7 +505,7 @@ Row {.tabset data-height=1240}
 
 ```{r dropdown-met-ldp}
 pds_met_rates <-
-  pds_all %>% filter(age_grp_2 != "Unknown", ldp != "ongoing", fy != current_fy) %>% 
+  pds_all %>% filter(age_grp_2 != "Unknown", ldp != "ongoing", fy %in% full_years) %>% 
   group_by(geog, fy, ldp) %>% 
   summarise(referrals = sum(referrals)) %>% pivot_wider(names_from = ldp, values_from = referrals, values_fill = 0) %>% 
   mutate(perc_met = round(100*(complete + exempt)/(complete + exempt + fail), 1))
@@ -538,13 +542,13 @@ pds_met_rates %>% select(geog, fy, perc_met) %>%
             pivot_wider(names_from = fy, values_from = perc_met) %>%
             mutate(across(where(is.numeric), ~paste0(.,"%"))) %>% 
             rename(`Health Board/Integration Authority Area` = geog) %>%
-            kable(align = c("l", rep("r", length(unique(pds_met_rates$fy))))) %>%
+            kable(align = c("l", rep("r", length(full_years)))) %>%
             kable_styling(full_width = TRUE) %>%
             column_spec(1, bold = TRUE) %>%
   # Add header above table
             add_header_above(
                     c(" " = 1,
-                     "Financial Year of Diagnosis" = length(unique(pds_met_rates$fy)))) %>% 
+                     "Financial Year of Diagnosis" = length(full_years))) %>% 
   scroll_box(height = "670px")
 
 ```
@@ -553,7 +557,7 @@ pds_met_rates %>% select(geog, fy, perc_met) %>%
 
 ```{r dropdown-exp}
 pds_exp_rates <- left_join(
-bind_rows(pds_scot_totals, pds_hb_totals) %>% filter(fy != current_fy),
+bind_rows(pds_scot_totals, pds_hb_totals) %>% filter(fy %in% full_years),
 exp %>% select(-health_board) %>% rename(geog = health_board_label)) %>% 
   mutate(exp_rate = round(100*total_referrals/diagnoses,1))
 
@@ -588,19 +592,19 @@ pds_exp_rates %>% select(geog, fy, exp_rate) %>%
             pivot_wider(names_from = fy, values_from = exp_rate) %>%
             mutate(across(where(is.numeric), ~paste0(.,"%"))) %>% 
             rename(`Health Board` = geog) %>%
-            kable(align = c("l", rep("r", length(unique(pds_exp_rates$fy))))) %>%
+            kable(align = c("l", rep("r", length(full_years)))) %>%
             kable_styling(full_width = TRUE) %>%
             column_spec(1, bold = TRUE) %>%
   # Add header above table
             add_header_above(
                     c(" " = 1,
-                     "Financial Year of Diagnosis" = length(unique(pds_exp_rates$fy))))
+                     "Financial Year of Diagnosis" = length(full_years)))
 
 ```
 
 ```{js }
 function filter_default() {
-    document.getElementById("trend_filter_hb").getElementsByClassName("selectized") 
+  document.getElementById("trend_filter_hb").getElementsByClassName("selectized") 
   [0].selectize.setValue("NHS Ayrshire & Arran", false);
 
   document.getElementById("trend_filter_hb").getElementsByClassName("selectized")
